--- a/public/styles/shareplace.css
+++ b/public/styles/shareplace.css
@@ -1,4 +1,3 @@
-label,
 input {
   display: block;
   width: 100%;
@@ -6,9 +5,10 @@ input {
 
 input {
   font: inherit;
-  padding: 0.15rem 0.25rem;
+  margin-top: 1rem;
+  padding: 0.15rem;
   border: 1px solid #ccc;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   text-align: center;
   color: #696969;
 }
@@ -41,12 +41,13 @@ input::placeholder {
 }
 
 #map img {
-  max-width: 320px;
-  width: 80%;
+  max-width: 220px;
+  width: 60%;
 }
 
 #map p {
-  font-size: 18px;
+  text-align: center;
+  font-size: 1.125rem;
   color: #696969;
 }
 
@@ -68,12 +69,12 @@ input::placeholder {
   max-width: 90%;
   margin: 2rem auto;
   border: 1px solid #ccc;
-  padding: 1rem;
+  padding: 0 1rem;
   text-align: center;
 }
 
 .prompt {
-  margin-bottom: 6px;
+  margin-bottom: 0.375rem;
   font-size: 1.1rem;
   color: #696969;
 }
