--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -15,12 +15,12 @@ body {
 .container {
   display: flex;
   align-items: center;
+  justify-content: start;
   width: 40rem;
-  max-width: 90%;
 }
 
 header {
-  padding: 0 10px;
+  padding: 0 0.625rem;
   background: #36007c;
   width: 100%;
   min-height: 4rem;
@@ -31,25 +31,25 @@ header {
 }
 
 header h1 {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   color: white;
-  margin: 0;
+  margin: 0 auto;
+  padding-top: 0.5rem;
   font-family: cursive, Tahoma, sans-serif;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.9);
   text-transform: uppercase;
-  word-spacing: 18px;
+  word-spacing: 12px;
 }
 
 .adress-header {
-  font-size: 1.4rem;
-  /* text-shadow: 1px 1px 0 #333, 1px -1px 0 #333, -1px 1px 0 #333, -1px -1px 0 #333, 1px 0px 0 #333, 0px 1px 0 #333, -1px 0px 0 #333, 0px -1px 0 #333; */
-  /* text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9); */
+  margin: auto;
+  font-size: 1.2rem;
   text-transform: capitalize;
-  word-spacing: 8px;
+  word-spacing: 4px;
 }
 
 header img {
-  margin: 0 28px;
+  margin-right: 1rem;
   width: 50px;
   filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.9));
 }
@@ -61,8 +61,8 @@ button {
   color: white;
   border: 1px solid #36007c;
   border-radius: 6px;
-  padding: 0.5rem 1.5rem;
-  margin: 0.5rem 0;
+  padding: 0.25rem 1rem;
+  margin: 0.75rem 0;
   cursor: pointer;
 }
 
@@ -145,6 +145,22 @@ button:disabled:active {
   100% {
     transform: rotate(360deg);
   }
+}
+
+@media (min-width: 400px) {
+  header h1 {
+    margin-left: 1.8rem;
+    padding-top: 0;
+    font-size: 1.8rem;
+    word-spacing: 17px;
+  }
+  header img {
+    margin: 0 1.75rem;
+  }
+.adress-header {
+  font-size: 1.4rem;
+  word-spacing: 6px;
+}
 }
 
 @media (min-width: 768px) {
